--- a/#source/scss/header.scss
+++ b/#source/scss/header.scss
@@ -1,4 +1,11 @@
 .header {
+	.header-container {
+		width: 870px;
+		max-width:870px;
+		margin: 0 auto;
+		width: 100%;
+		@media (max-width:$md1+px){max-width: 730px;}
+	}
 	position: relative;
 	// height: 90px;
 	padding: 30px 0 60px;
